@@ -1,8 +1,12 @@
 $Id$
             
+            [- Version 2.1.32 -]
 2007-05-30: object.lisp: Replaced occurrence of 'multi-let' with
             'multiple-value-let', because 'multi-let' is not defined
             until a later file.
+            debug.lisp: Replaced constant absent-dbg-entry* with a
+            _pattern_ that defines a Dbg-entry as absent.  So far this
+            makes little difference.
 
             [- Version 2.1.30 -]
 2007-05-29: files.lisp: Stopped system from asking infuriating
